--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Vasari/atom-shell-pull/issues"
   },
-  "homepage": "https://github.com/Vasari/atom-shell-pull"
+  "homepage": "https://github.com/Vasari/atom-shell-pull",
+  "dependencies": {
+    "octonode": "^0.6.3",
+    "lodash": "^2.4.1"
+  }
 }
